frontend/web/source_assets/css/place-add-photo.less
body.place-add-photo {
  .main-info {
    height: 100%;
    padding: 0;
    color: white;
  }

  #main-content main {
    padding: 24px;
  }

  #points {
    .point {
      font-size: 32px;

      &.active {
        font-size: 42px;
      }
    }
  }

  .magnifier-wrapper {
    position: relative;
    padding: 0;

    .vline {
      position: absolute;
      z-index: 6;
      height: 100%;
      border: 1px solid #009688;
      margin-left: 50%;
      margin-top: 0;
    }

    .hline {
      position: absolute;
      z-index: 6;
      margin-top: 50%;
      width: 100%;
      border-width: 2px;
      border-color: #009688;
    }

    .magnifier-glass {
      overflow: hidden;
      visibility: hidden;
      position: absolute;
      z-index: 6;
      border: 3px solid #26a69a;
      background: #333;
      border-radius: 50%;
      cursor: none;
      /*Set the size of the magnifier glass:*/
      width: 150px;
      height: 150px;

      img {
        position: absolute;
        z-index: 4;
      }
    }

    &:hover .magnifier-glass {
      //visibility: visible;
    }

    .point {
      position: absolute;
      border: 1px solid black;
      box-shadow: white 0px 0px 7px inset;

      width: 12px;
      height: 12px;
      margin-top: -8px;
      margin-left: -8px;

      &.point-sm {
        z-index: 2
      }

      &.point-lg {
        z-index: 7;
      }

      div {
        border: 2px solid;
        width: 10px;
        height: 10px;
      }

      .point-label {
        border: 1px solid black;
        background: #fff;
        font-size: 10px;
        color: black;
        width: auto;
        height: auto;
        position: absolute;
        margin-left: 10px;
        padding: 2px;
      }

    }
  }

  .active-image-box {
    height: 590px;
    text-align: center;

    img {
      margin: 0 auto;
      max-width: 100%;
      max-height: 100%;
    }
  }

  .scroll-left-btn, .scroll-right-btn {
    font-size: 38px;
    cursor: pointer;
  }

  .horizontal-scroll-box {
    white-space: nowrap;
    overflow: auto;
    width: 100%;
  }

  .card {
    width: 195px;
    display: inline-block;
    margin-right: 24px;

    img {
      cursor: pointer;
    }

    .card-content {
      p {
        color: #333;
      }
    }
  }

  .stepper {
    text-align: center;
    margin-top: 0;

    & > div {
      display: inline-block;
      color: #aaa;
      margin: 0 24px;

      &.active {
        color: #fff;
      }

      .number {
        font-size: 24px;
        margin-right: 12px;
      }
    }
  }

  .review-image-box {
    display: flex;
    justify-content: center;

    width: 100%;
    height: 590px;

    .slider {
      width: 100%;
      height: 100%;

      .new-photo-wrapper {
        width: 50%;
      }

      > div {
        position: absolute;
        height: 100%;
        display: inline-block;
        top: 0;
        overflow: hidden;
        -webkit-backface-visibility: hidden;

        img {
          height: 100%;
          max-width: initial;
          max-height: initial;
        }
      }

      .handle {
        left: 50%;
        overflow: visible;
        height: 100%;

        .line {
          width: 3px;
          left: 50%;
          height: 100%;
          background: #009688;
          display: block;
          border: 1px solid white;
        }

        .left {
          top: 50%;
          position: absolute;
          font-size: 32px;
          color: #009688;
          margin-left: -30px;
        }

        .right {
          top: 50%;
          position: absolute;
          font-size: 32px;
          color: #009688;
          margin-left: 10px;
        }
      }
    }
  }

  .actions {
    display: flex;
    justify-content: space-between;

    .btn-flex-right {
      margin-left: auto;
      margin-right: 24px;
    }
  }

  section.confirm {
    .photo img {
      max-width: 100%;
      max-height: 100%;
    }
  }

  #map-search {
    top: 7px;
    width: 180px;
    border: 0;
    background: white;
    margin-top: 3px;
    padding: 0 16px;
    font-size: 13px;
    height: 30px;
  }
}

